[package]
name = "binandlib"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "A crate that verifies that it is possible for a published crate to be both a binary and a library"
edition = "2021"
rust-version = "1.65"
homepage = "https://github.com/emilk/binandlib"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emilk/binandlib"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
